--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,5 @@
 # Uncomment this line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '14.0' # platform :ios, '12.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -31,7 +31,16 @@ target 'Runner' do
   use_frameworks!
   use_modular_headers!
 
+  # Flutter 설치와 관련된 설정
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+  target 'RunnerTests' do
+    inherit! :search_paths
+  end
+
+  # google_maps_flutter 의존성 추가
+  #pod 'google_maps_flutter_ios', :path => '../.symlinks/plugins/google_maps_flutter_ios/ios'
+  pod 'google_maps_flutter_ios', :path => '.symlinks/plugins/google_maps_flutter_ios/ios'
+
 end
 
 post_install do |installer|
@@ -39,3 +48,4 @@ post_install do |installer|
     flutter_additional_ios_build_settings(target)
   end
 end
+
