--- a/ios/.gitignore
+++ b/ios/.gitignore
@@ -32,3 +32,14 @@ Runner/GeneratedPluginRegistrant.*
 !default.mode2v3
 !default.pbxuser
 !default.perspectivev3
+
+# Flutter 관련
+**/build/
+**/.dart_tool/
+**/.idea/
+**/.packages
+**/flutter_export_environment.sh
+**/pubspec.lock
+
+# macOS 관련
+.DS_Store
